# darknet

./: .gitignore  CMakeLists.txt  Makefile  README.md  yolov4_conv_2.cfg  yolov4_conv_3.cfg
cmake/: DarknetConfig.cmake.in  darknetInstall.cmake  darknetLinkLibraries.cmake  darknetOptions.cmake
cmake/Modules/: FindCUDNN.cmake
cuda/: network_kernels.cu  network_kernels_opencv.cu
cuda/layers/: activation_kernels.cu  avgpool_layer_kernels.cu  col2im_kernels.cu  convolutional_kernels.cu  convolutional_kernels_opencv.cu  crop_layer_kernels.cu  deconvolutional_kernels.cu  dropout_layer_kernels.cu  identity_layer_kernels.cu  im2col_kernels.cu  linear_layer_kernels.cu  maxpool_layer_kernels.cu  prelu_layer_kernels.cu
cuda/utils/: blas_kernels.cu  cuda_opencv.cu
include/: dark_cuda.h  darknet.h
include/darknet/: dark_cuda.h  darknet.h  network.h  network_opencv.h  yolo_v2_class.hpp
include/darknet/applications/: classifier.h  demo.h  demo_realsense.h
include/darknet/images/: http_stream.h  http_stream_opencv.h  image.h  image_opencv.h  image_opencv_realsense.h  realsense-opencv-helpers.hpp
include/darknet/layers/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  box.h  connected_layer.h  conv_lstm_layer.h  convolutional_layer.h  convolutional_layer_opencv.h  cost_layer.h  crnn_layer.h  crop_layer.h  deconvolutional_layer.h  detection_layer.h  dropout_layer.h  gaussian_yolo_layer.h  gru_layer.h  identity_layer.h  im2col.h  layer.h  linear_layer.h  local_layer.h  lstm_layer.h  maxpool_layer.h  normalization_layer.h  prelu_layer.h  region_layer.h  reorg_layer.h  reorg_old_layer.h  rnn_layer.h  route_layer.h  sam_layer.h  scale_channels_layer.h  shortcut_layer.h  softmax_layer.h  upsample_layer.h  yolo_layer.h
include/darknet/utils/: blas.h  darkunistd.h  data.h  data_opencv.h  gemm.h  gettimeofday.h  matrix.h  option_list.h  parser.h  tree.h  utils.h
include/images/: httplib.h  image_opencv.h
include/layers/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  box.h  connected_layer.h  conv_lstm_layer.h  convolutional_layer.h  cost_layer.h  crnn_layer.h  crop_layer.h  deconvolutional_layer.h  detection_layer.h  dropout_layer.h  gaussian_yolo_layer.h  gru_layer.h  identity_layer.h  im2col.h  layer.h  linear_layer.h  local_layer.h  lstm_layer.h  maxpool_layer.h  normalization_layer.h  prelu_layer.h  region_layer.h  reorg_layer.h  reorg_old_layer.h  rnn_layer.h  route_layer.h  sam_layer.h  scale_channels_layer.h  shortcut_layer.h  softmax_layer.h  upsample_layer.h  yolo_layer.h
include/utils/: blas.h  gettimeofday.h  option_list.h  parser.h
src/: dark_cuda.c  darknet.c  darknet_opencv.c  demo.c  detector.c  network.c  network_opencv.c  yolo_console_dll.cpp  yolo_v2_class.cpp
src/applications/: art.c  captcha.c  cifar.c  classifier.c  coco.c  compare.c  demo.c  demo_realsense.c  detector.c  dice.c  go.c  nightmare.c  rnn.c  rnn_vid.c  super.c  swag.c  tag.c  voxel.c  writing.c  yolo.c
src/images/: http_stream.cpp  http_stream_opencv.cpp  image.c  image_opencv.cpp  image_opencv_realsense.cpp
src/layers/: activation_layer.c  activations.c  avgpool_layer.c  batchnorm_layer.c  box.c  col2im.c  connected_layer.c  conv_lstm_layer.c  convolutional_layer.c  convolutional_layer_opencv.c  cost_layer.c  crnn_layer.c  crop_layer.c  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gaussian_yolo_layer.c  gru_layer.c  identity_layer.c  im2col.c  layer.c  linear_layer.c  local_layer.c  lstm_layer.c  maxpool_layer.c  normalization_layer.c  prelu_layer.c  region_layer.c  reorg_layer.c  reorg_old_layer.c  rnn_layer.c  route_layer.c  sam_layer.c  scale_channels_layer.c  shortcut_layer.c  softmax_layer.c  upsample_layer.c  yolo_layer.c
src/utils/: blas.c  data.c  data_opencv.c  gemm.c  getopt.c  gettimeofday.c  list.c  matrix.c  option_list.c  parser.c  tree.c  utils.c  writing.c
